style/spacing fixes

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -157,7 +157,7 @@ a {
   font-weight: 300;
   padding: .5em 0 .75em 0;
   letter-spacing: .01em;
-  float:left;
+  float: left;
 }
 
 .textbox {
@@ -758,7 +758,18 @@ input[type='text'] {
   display: inline;
   li {
     display: inline-block;
-    padding: 8px;
+    padding: 0 20px 30px 0;
+    @media screen and (max-width: 1154px) {
+      width: 45%;
+    }
+    @media screen and (max-width: 894px) {
+      padding: 0 0px 30px 60px;
+      width: 40%;
+    }
+    @media screen and (max-width: 500px) {
+      padding: 0 0px 30px 0px;
+      width: 60%;
+    }
   }
 }
 
@@ -801,8 +812,6 @@ input[type='text'] {
 }
 
 .badge-home {
-  width: 400px;
-  height: 200px;
   hr {
     max-width: 80%;
   }
@@ -813,19 +822,22 @@ input[type='text'] {
 }
 
 .badge-Details {
-  position: relative;
-  float: right;
-  width: 210px;
+  float: left;
+  width: 50%;
   text-align: left;
+  margin-left: 30px;
   .sub-head {
     line-height: 1.2em;
     padding-bottom: 0;
+    width: 100%;
+    @media screen and (max-width: 894px) {
+      margin-top: 15px;
+    }
   }
-  @media screen and (max-width: 630px) {
+  @media screen and (max-width: 894px) {
     float: initial;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
+    margin-left: 0;
+    width: 100%;
   }
 }
 
@@ -843,7 +855,6 @@ input[type='text'] {
 }
 
 .line-break {
-  float: right;
   width: 190px;
   height: 1px;
   margin-right: 20px;
@@ -1021,11 +1032,11 @@ input[type='text'] {
 }
 
 .badgeroll-center {
-  max-width: 832px;
+  max-width: 80%;
   margin: 0 auto 0 auto;
-  padding: 0 20px 2em 20px;
-  @media screen and (max-width: 1101px) {
-    max-width: 400px;
+  padding: 0px 20px .8em 20px;
+  @media screen and (max-width: 1154px) {
+    max-width: 100%;
   }
   @media screen and (max-width: 600px) {
     padding: 0;
@@ -1120,6 +1131,7 @@ input[type='text'] {
   max-width: 100%;
   margin-right: auto;
   margin-left: auto;
+  padding-top: 65px;
   &.front {
     text-align: center;
   }
@@ -1128,12 +1140,10 @@ input[type='text'] {
 #Badge-Container {
   min-width: 300px;
   max-width: 100%;
-  @media screen and (max-width: 1100px) {
-    position: relative;
-    max-width: 75%;
-    margin: 50px 10px 0 10px;
-    margin-right: auto;
-    margin-left: auto;
+  @media screen and (max-width: 768px) {
+    max-width: 100%;
+    text-align: center;
+    margin: auto;
   }
 }
 
@@ -1166,7 +1176,7 @@ input[type='text'] {
   font-weight: 800;
   width: 100%;
   padding-top: 8px;
-  padding-bottom: 2px;
+  padding-bottom: 20px;
   text-align: center;
   color: #bbb;
 }
